# ax-coding-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.portal  EVIDENCE.md  Makefile  PORTAL_DEPLOY_REPORT.md  README.md  RECON_REPORT.md  ax-agent.sh  docker-compose.yml  e2e_output.txt  entrypoint.sh  litellm_config.yaml  make-submission.sh  pyproject.toml
.ai/: apt-web-integration-v1-instructions.md  apt-web-routing-v2-instructions.md  portal-deploy-v1-instructions.md  portal-recon-2026-04-27.md  portal-recon-v1-instructions.md
.ai/research/: harness-insights-2026-04-26.md
.ai/sessions/: session-2026-04-11-0001.md  session-2026-04-11-0002.md  session-2026-04-12-0001.md  session-2026-04-12-0002.md  session-2026-04-12-0003.md  session-2026-04-12-0004.md  session-2026-04-19-0001.md  session-2026-04-19-0002.md  (+21 more)
.devcontainer/: devcontainer.json
coding_agent/: config.py  llm_compat.py  logging_config.py  models.py  resilience_compat.py
docs/: ARCHITECTURE.md
tests/: test_ask_adapter.py  test_ask_tool.py  test_context_integration.py  test_decomposition_gate.py  test_done_condition.py  test_langfuse_observer.py  test_memory.py  test_models_provider.py  test_p35_phase3.py  test_p35_regressions.py  test_pending_nudge.py  test_performance.py  test_resilience.py  test_shell_tool.py  test_spec_tool.py  test_sufficiency_critic.py  test_sufficiency_e2e.py  test_sufficiency_loop.py  test_sufficiency_rules.py  test_task_tool_chain_advance.py  test_task_tool_evidence.py  test_task_tool_marking.py  test_todo_tool.py  test_user_decisions.py
(+49 files in other folders)
