[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["coding_agent*"]

[project]
name = "ax-coding-agent"
version = "0.1.0"
description = "AI Coding Agent Harness — 3계층 메모리, 동적 SubAgent, Agentic Loop 복원력"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "minyoung-mah[langgraph]>=0.1.7",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.4.0",
    "litellm>=1.50.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "langfuse>=2.0",
]

# minyoung-mah is not on PyPI yet — install editable from a sibling
# checkout first (`pip install -e ../minyoung-mah`), then run
# `pip install -e .[dev]`. The Makefile `install` target does both in
# order. See apt-legal-agent/pyproject.toml for the same pattern.

[project.scripts]
ax-agent = "coding_agent.cli.app:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
